<resources>

    <string name="appName">Fachschaftsdroide</string>

    <!-- misc -->
    <string name="refresh">Aktualisieren</string>
    <string name="die_fachschaft_de">http://die-fachschaft.de/</string>

    <!-- status -->
    <string name="statusOpen">offen</string>
    <string name="statusUnknown">unbekannt</string>
    <string name="statusClosed">geschlossen</string>
    <string name="statusDescription">Status der Fachschaft ist gerade:</string>

    <!-- meeting -->
    <string name="meetingDescription">Nächste Sitzung:</string>

    <!-- drawer items -->
    <string name="fs">Die Fachschaft</string>
    <string name="news">Neuigkeiten</string>
    <string name="drawerCategoryNews">Aktuelles</string>
    <string name="meetings">Sitzungen</string>
    <string name="contact">Kontakt</string>
    <string name="drawerCategoryAboutApp">Der Fachschaftsdroide</string>
    <string name="about">Über die App</string>
<string name="map">Karte</string>

    <!-- drawer -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- contact -->
    <string name="telefon">Telefon</string>
    <string name="email">Email</string>
    <string name="fsmiAddress">Fachschaft Mathematik/Informatik\nRaum E1.311\nWarburger Straße 100\n33098 Paderborn</string>
    <string name="fsmiQueryAddress">Fachschaft+Mathematik/Informatik+Warburger+Straße+100,+Paderborn</string>
    <string name="adresse">Adresse</string>
    <string name="fsmiMail">fsmi@uni-paderborn.de</string>
    <string name="fsmiTelephone">05251 &#8212; 60 32 60</string>
    <string name="fsmiRoomCampus">E1.311</string>
    <string name="add_contact">Zu Kontakten hinzufügen</string>

    <!-- licenses -->
    <string name="apacheLicense">Apache License 2.0</string>
    <string name="unknownLicense">Unbekannt</string>

    <!-- news -->
    <string name="newsHeadline">Neuigkeiten</string>
    <string name="newsExplanation">In der ersten Beta wurde aus Zeitgründen darauf verzichtet, die Neuigkeitenfunktion zu implementieren. Diese wird baldmöglichst nachgereicht ;)\nIn der Zwischenzeit kannst du die Neuigkeiten auf unserer Seite lesen.</string>
    <string name="newsLoadingTitle">Neuigkeiten</string>
    <string name="newsLoadingDescription">Die Neuigkeiten werden geladen.</string>

</resources>